welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: ';' expected but ',' found.
  gauche(),move(5),droite()
          ^